# standard_transform

./: .bmv-post-commit.sh  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  make_streamline_grid_state.py  minnie_streamline_grid_link.txt  minnie_streamline_grid_state.json  mkdocs.yml  pyproject.toml  setup.py  streamline_generation.ipynb  v1dd_streamline_distributed.ipynb  v1dd_streamline_grid_layer.json  v1dd_streamline_grid_link.txt  v1dd_streamline_grid_state.json
.github/workflows/: docs.yml
docs/: datasets.md  index.md  streamline-field-method.md  upgrading.md
docs/concepts/: depth-and-radial-distance.md  oriented-frame.md  streamlines-vs-field.md  versioning.md
docs/design/: layer-support.md
docs/guides/: build-a-field.md  depth-radial.md  per-neuron-streamline.md  skeletons-meshworks.md  streamline-space.md  transform-points.md
docs/reference/: datasets.md  streamlines.md  transforms.md
scripts/: build_streamline_field.py  compare_field_methods.py  tune_laplace_strength.py  validate_streamline_field.py
src/: __init__.py  base.py  datasets.py
standard_transform/: __init__.py  base.py  datasets.py  streamlines.py  utils.py
standard_transform/data/: minnie_streamline_field.npz  minnie_um_streamline.json  v1dd_streamline_field.npz  v1dd_um_streamline.json
test/: test_streamline.py  test_tform.py
tests/: test_laplace_field.py  test_streamline.py  test_streamline_space.py  test_tform.py  test_transformer.py  test_versions.py
