[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "standard-transform"
version = "1.4.1"
description = "Define and repeat basic affine transformation tasks for datasets"
readme = "README.md"
authors = [
    {name = "Casey Schneider-Mizell", email = "caseys@alleninstitute.org"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "scipy",
    "numpy",
    "pandas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
    "bump-my-version",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
lint = [
    "ruff"
]
profile = [
    "scalene",
    "pyinstrument",
]

[tool.uv]
default-groups = ["dev", "docs", "lint", "profile"]

[project.urls]
Homepage = "https://github.com/ceesem/standard_transform"
Repository = "https://github.com/ceesem/standard_transform"

[tool.bumpversion]
current_version = "1.4.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""
pre_commit_hooks = ['uv sync', 'git add uv.lock']
post_commit_hooks = ["./.bmv-post-commit.sh"]

[[tool.bumpversion.files]]
filename = "standard_transform/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]

[tool.poe.tasks.drybump]
cmd = "uv run bump-my-version bump --dry-run --verbose"
help = "Dry run of version bump for the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.bump]
cmd = "uv run bump-my-version bump"
help = "Bump the version number in the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.test]
cmd = "uv run pytest --cov=standard_transform tests"
help = "Run pytest with code coverage."

[tool.poe.tasks.doc-preview]
cmd = "uv run mkdocs serve"
help = "Preview documentation build locally"

[tool.poe.tasks.profile-all]
cmd = "uv run scalene"
help = "Profile cpu and memory of task with scalene"

[tool.poe.tasks.profile]
cmd = "uv run pyinstrument -r html"
help = "Profile cpu of task with pyinstrument"
